force-app/main/default/objects/ccnavmenus__Menu_Item__c/fields/ccnavmenus__Language__c.field-meta.xml
<CustomField>
    <fullName>ccnavmenus__Language__c</fullName>
    <description>Language Target</description>
    <inlineHelpText>Language target. If left blank, menu item will appear for all languages, otherwise it will only appear for selected languages. If translation is not needed, leave blank.</inlineHelpText>
    <label>Language</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ccnavmenus__Languages</valueSetName>
    </valueSet>
</CustomField>