force-app/main/default/objects/ccnavmenus__Menu_Item__c/fields/ccnavmenus__Menu__c.field-meta.xml
<CustomField>
    <fullName>ccnavmenus__Menu__c</fullName>
    <description>Parent Menu</description>
    <inlineHelpText>Parent Menu the menu item belongs to.</inlineHelpText>
    <label>Menu</label>
    <referenceTo>ccnavmenus__Menu__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>Menu_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>