force-app/main/default/objects/ccnavmenus__Menu_Item__c/fields/ccnavmenus__Menu_Path__c.field-meta.xml
<CustomField>
    <fullName>ccnavmenus__Menu_Path__c</fullName>
    <formula>ccnavmenus__Menu__r.Name + &quot; - &quot; +
RPAD(

LPAD(
IF(NOT(ISBLANK( TEXT(
ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Position__c))),
TEXT(ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Position__c),&quot;&quot;),3,&quot;0&quot;) +

LPAD(
IF(NOT(ISBLANK( TEXT(
ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Position__c))),
TEXT(ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Position__c),&quot;&quot;),3,&quot;0&quot;) +

LPAD(
IF(NOT(ISBLANK( TEXT(
ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Position__c))),
TEXT(ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Position__c),&quot;&quot;),3,&quot;0&quot;) +

LPAD(
IF(NOT(ISBLANK( TEXT(
ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Position__c))),
TEXT(ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Position__c),&quot;&quot;),3,&quot;0&quot;) +

LPAD(
IF( NOT(ISBLANK( TEXT(
ccnavmenus__Menu_Item__r.ccnavmenus__Position__c ))),
TEXT(ccnavmenus__Menu_Item__r.ccnavmenus__Position__c),&quot;&quot;),3,&quot;0&quot;) +

LPAD(
IF( NOT(ISBLANK( TEXT(
ccnavmenus__Position__c ))),
TEXT(ccnavmenus__Position__c),&quot;&quot;),3,&quot;0&quot;)
,
18,
&quot;0&quot;)</formula>
    <label>Menu Path</label>
    <type>Text</type>
</CustomField>