force-app/main/default/objects/ccnavmenus__Menu_Item__c/fields/ccnavmenus__Open_in_New_Window__c.field-meta.xml
<CustomField>
    <fullName>ccnavmenus__Open_in_New_Window__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Open link in new window/tab</description>
    <inlineHelpText>If link is not set to javascript:void(0); the link will be forced to open in a new tab.</inlineHelpText>
    <label>Open in New Window</label>
    <type>Checkbox</type>
</CustomField>