force-app/main/default/objects/ccnavmenus__Menu_Item__c/fields/ccnavmenus__SLDS_Icon__c.field-meta.xml
<CustomField>
    <fullName>ccnavmenus__SLDS_Icon__c</fullName>
    <defaultValue>&quot;utility:connected_apps&quot;</defaultValue>
    <description>SLDS Icon Name</description>
    <inlineHelpText>Optional: name of the SLDS icon to appear next to the menu label.</inlineHelpText>
    <label>SLDS Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>