force-app/main/default/objects/ccnavmenus__Menu_Item__c/fields/ccnavmenus__URL__c.field-meta.xml
<CustomField>
    <fullName>ccnavmenus__URL__c</fullName>
    <defaultValue>&quot;javascript:void(0);&quot;</defaultValue>
    <description>Menu Item URL</description>
    <inlineHelpText>URL for menu item. This can be a fully qualified url, or a relative url in a community.
Example: &quot;https://www.salesforce.com&quot; or &quot;/s/my-custom-page&quot; or &quot;my-custom-page&quot; etc.</inlineHelpText>
    <label>URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>