force-app/main/default/objects/ccnavmenus__Menu_Item__c/validationRules/ccnavmenus__Too_Many_Levels.validationRule-meta.xml
<ValidationRule>
    <fullName>ccnavmenus__Too_Many_Levels</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(
ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__r.ccnavmenus__Menu_Item__c
))</errorConditionFormula>
    <errorDisplayField>ccnavmenus__Menu_Item__c</errorDisplayField>
    <errorMessage>You&apos;ve reached the maximum allowed number of levels in depth.</errorMessage>
</ValidationRule>