force-app/main/default/objects/ccnavmenus__Menu_Item__c/listViews/ccnavmenus__All.listView-meta.xml
<ListView>
    <fullName>ccnavmenus__All</fullName>
    <columns>ccnavmenus__Menu_Path__c</columns>
    <columns>ccnavmenus__Position__c</columns>
    <columns>NAME</columns>
    <columns>ccnavmenus__Menu_Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>